--- a/server/src/views/layout.jade
+++ b/server/src/views/layout.jade
@@ -2,6 +2,8 @@ doctype 5
 html
   head
     title= title
+    <meta charset='UTF-8'>
+    script(src='/javascripts/edit.js', type='text/javascript')
     link(rel='stylesheet', href='/stylesheets/style.css')
   body
     block header
