--- a/server/src/views/rawItemList.jade
+++ b/server/src/views/rawItemList.jade
@@ -1,18 +1,34 @@
 extends base
 
 block content
+    form(action="#{site}#{url2}", method="post")
         table(border=2)
             tr
+                th 
                 th watchID
                 th name
-                th priority
+                th datatype
             for data,index in item_list
                 -var className='list_odd';
                 if(index % 2) == 0
                     -className='list_even';
                 else
-                tr(class='#{className}')
+                tr(class='#{className}',onclick='clickCell(#{index});')
+                    td 
+                        input(type='radio', name='selid', value='#{data._id}')
                     td(align='center') #{data.watchID}
                     td #{data.name}
                     td #{data.datatype}
-  
+          table
+            tr
+                td 
+                    input(type='button', value='追加',onclick='addView("#{url2}");')
+                td &nbsp;&nbsp;
+                td 
+                    input(type='button', value='変更',onclick='updateView("#{url2}");')
+                td &nbsp;&nbsp;
+                td 
+                    input(type='button', value='削除',onclick='deleteView("#{url2}");')
+                td &nbsp;&nbsp;
+                    input(type='text', value='', name='editType', style='display:none')
+
