--- a/server/src/views/layout.jade
+++ b/server/src/views/layout.jade
@@ -3,8 +3,8 @@ html
   head
     title= title
     <meta charset='UTF-8'>
-    script(src='/javascripts/edit.js', type='text/javascript')
-    link(rel='stylesheet', href='/stylesheets/style.css')
+    script(src='/rec/javascripts/edit.js', type='text/javascript')
+    link(rel='stylesheet', href='/rec/stylesheets/style.css')
   body
     block header
     block content
