--- a/server/src/views/monitorList.jade
+++ b/server/src/views/monitorList.jade
@@ -22,7 +22,7 @@ block content
                     td(align='center') #{data.watchID}
                     td(align='center') #{data.presetID}
                     td #{data.name}
-                    td #{data.params}
+                    td #{JSON.stringify(data.params)}
           table
             tr
                 td 
