--- a/server/src/views/presetEdit.jade
+++ b/server/src/views/presetEdit.jade
@@ -1,7 +1,7 @@
 extends baseEdit
 
 block content
-    form(action="#{site}#{url2}", method="post")
+    form(action="/rec#{site}#{url2}", method="post")
           table
             tr
                 td presetID
