--- a/server/src/views/monitorList.jade
+++ b/server/src/views/monitorList.jade
@@ -1,7 +1,7 @@
 extends base
 
 block content
-    form(action="#{site}#{url2}", method="post")
+    form(action="#{url2}", method="post")
         table(border=2)
             tr
                 th 
