--- a/server/src/views/base.jade
+++ b/server/src/views/base.jade
@@ -1,26 +1,26 @@
 extends layout
 
 block header
-    form(action="/rec#{site}#{url}", method="post")
+    form(action="#{url}?#{queryStr}", method="post")
         table
             tr
                 td
-                    a(href='/rec#{site}monitorlist') モニタ一覧
+                    a(href='monitorlist') モニタ一覧
                 td &nbsp;&nbsp;
                 td
-                    a(href='/rec#{site}rawItemList') rawアイテム一覧
+                    a(href='rawItemList') rawアイテム一覧
                 td &nbsp;&nbsp;
                 td
-                    a(href='/rec#{site}presetList') プリセット一覧
+                    a(href='presetList') プリセット一覧
                 td &nbsp;&nbsp;
                 td
-                    a(href='/rec#{site}rawDataList') rawデータ一覧
+                    a(href='rawDataList') rawデータ一覧
                 td &nbsp;&nbsp;
                 td
-                    a(href='/rec#{site}evidenceList') エビデンス一覧
+                    a(href='evidenceList') エビデンス一覧
                 td &nbsp;&nbsp;
                 td
-                    a(href='/rec#{site}recoveryeviList') リカバリスクリプトエビデンス一覧
+                    a(href='recoveryeviList') 対応スクリプトエビデンス一覧
  
         br
         span(class='title') #{title}
@@ -31,7 +31,7 @@ block header
                 td データ数合計&nbsp;#{totalList}件（#{page*limit+1}-#{page*limit+item_list.length}を表示）
                 td &nbsp;&nbsp;
                 td
-                    a(href='/rec#{site}#{url}?#{queryStr}') 最新情報に更新
+                    a(href='#{url}?#{queryStr}') 最新情報に更新
                 td &nbsp;&nbsp;
                 td  
                     pageCount = (totalList-1)/limit;
@@ -46,19 +46,19 @@ block header
                         ePage = pageCount;
                         eOmis = '';
                     if pageCount>1 
-                        a(href='/rec#{site}#{url}?page=#{1}&#{queryStr}') [先頭]
+                        a(href='#{url}?page=#{1}&#{queryStr}') [先頭]
                         &nbsp;
                         font #{sOmis}
                         -for(var count=sPage ; count<ePage ; count++)
                             if count==page
                                 [#{count+1}]&nbsp;
                             else
-                                a(href='/rec#{site}#{url}?page=#{count+1}&#{queryStr}') [#{count+1}]
+                                a(href='#{url}?page=#{count+1}&#{queryStr}') [#{count+1}]
                                 &nbsp;
                          font #{eOmis}
-                         a(href='/rec#{site}#{url}?page=#{parseInt(pageCount+1)}&#{queryStr}') [最終]
+                         a(href='#{url}?page=#{-1}&#{queryStr}') [最終]
                 td &nbsp;&nbsp;
                 td 
-                    input(type='submit', value='DownLoad')
+                    input(type='submit', value='Download')
 block content
 
