--- a/app/views/rawDataList.jade
+++ b/app/views/rawDataList.jade
@@ -15,9 +15,11 @@ block content
 
         table(border=2)
             tr
+                th recid
                 th location
                 th type
                 th data
+                th authid
                 th timestamp
                 th context
             for data,index in item_list
@@ -26,9 +28,11 @@ block content
                     -className='list_even';
                 else
                 tr(class='#{className}')
+                    td #{data.recid}
                     td #{data.location}
                     td #{data.type}
                     td(align='center') #{data.data}
+                    td #{data.authid}
                     td #{data.timestamp}
                     td #{data.context}
   
